Changes to squid-1.2.alpha5 ():

	- New configuration system.  Everything is generated from
	  'cf.data.pre', including the main parser, setting defaults,
	  outputting current values, and freeing memory.  
	  This also involved moving some of the local data structures
	  (e.g. struct _acl *AclList in acl.c) to the Config
	  structure.  (Max Okumoto)
	- No more '/i' for regular expressions.  Now insert a '-i'
	  to switch to case-insensitive.  Use '+i' for case-sensitive.
	- When you have a variable named the same as its type, sizeof()
	  gets the wrong one (fde).
	- Need to flush unbuffered logs before fork().
	- Added two fields swap log: refcount and e->flag.
	- Removed all the .h files for each .c file.  Now #include stuff
	  is in either: defines.h, enums.h, typedefs.h, structs.h,
	  or protos.h, globals.h.  This greatly reduces dependencies
	  between the various source files.
	- globals.c is generated from globals.h by a Perl script.
	- Started customizable error texts.

Changes to squid-1.2.alpha4 ():

	- New MIME configuration, regular expression based
	- Added request_timeout config option
	- Multiple HTTP sockets (Lincoln Dale).
	- Moved 'fds_are_n_free' check to httpAccept().
	- s/USE_POLL/HAVE_POLL/; make poll() default if available.
	- Changed storeRegister to use offsets and make immediate
	  callbacks if appropriate.
	- Removed icpDetectClientClose().  Some of that functionality
	  goes into clientReadRequest() and the rest into
	  httpRequestFree().
	- Moved IP lookups to commConnect stuff.
	- Added support for retrying connect().
	- New inline debug() macro (David Luyer).
	- Replace frequent gettimeofday() calls with alarm(3) based
	  clock.  Need to add more gettimeofday() calls to get back
	  high-resolution timestamp logging (Andres Kroonmaa).
	- Added support for Cache-control: proxy-revalidate;
	  based on squid-1.1 patch from Mike Mitchell.

Changes to squid-1.2.alpha3 ():

	- Implemented persistent connections between clients and squid.